# conditional_trait_gen

./: Cargo.toml  README.md  RELEASES.md
src/: lib.rs  tests.rs
tests/: integration.rs
