[package]
name = "conditional-trait-gen"
description = "Trait implementation generator macro supporting conditional methods"
version = "0.4.1"
edition = "2021"
rust-version = "1.58.0"
authors = ["Redglyph", "Daniel Vigovszky <me@vigoo.dev>"]
categories = ["rust-patterns"]
keywords = ["proc-macro", "macro", "trait", "generator"]
documentation = "https://docs.rs/conditional-trait-gen"
homepage = "https://github.com/vigoo/conditional_trait_gen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vigoo/conditional_trait_gen"
readme = "README.md"

[lib]
proc-macro = true

[features]
in_format = []

[dependencies]
quote = "1.0.23"
proc-macro2 = { version = "1.0.51", features = ["span-locations"] }
syn = { version = "1.0.109", features = ["full", "visit-mut", "extra-traits"] }
proc-macro-error = "1.0.4"

[dev-dependencies]
async-trait = "0.1.83"
tokio = { version = "1.40.0", features = ["full"] }